[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer hook program for Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = "0.31.1"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"

[dev-dependencies]
solana-program = "~2.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true
